# langmachines

./: .gitignore  .pre-commit-config.yaml  COMMIT_CONVENTIONS.md  CONTRIBUTING.md  DEV_PRECOMMIT_SNIPPET.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: minimize_even_zeros.py  nfa_union_ab.py  plot_minimized_even_zeros.py
src/langmachines/: __init__.py  dfa.py  nfa.py
src/langmachines/algorithms/: minimize.py
src/langmachines/io/: dot.py  jsonio.py
tests/: test_dfa_basic.py  test_dot.py  test_minimize.py  test_nfa.py
