[project]
name = "langmachines"
version = "0.1.0"
description = "Lightweight automata toolkit (DFA/NFA, Hopcroft minimization, regex→DFA)."
readme = "README.md"
authors = [{ name = "Charlie Tang" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.7", "ruff>=0.5"]
viz = ["graphviz>=0.20.3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
langmachines = "langmachines.cli:main"

[[tool.mypy.overrides]]
module = "graphviz"
ignore_missing_imports = true
